@@ -1,3 +1,9 @@
+Sat Apr 11 18:41:05 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * tests/cuts/workers/CPU/Thread_Test.cpp:
+
+          . Added support to print results to standard out.
+
 Sat Apr 11 18:31:29 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MPC/config/cuts_cpu_worker.mpb:
